# api.yaml
@@ -51,7 +51,7 @@ paths:
           name: System-Design-User-Id
           required: true
           description: >
-            Идентификатор пользователя, который аутентифицирован в данном запросе.
+            Идентификатор ползователя, который аутентифицирован в данном запросе.
           schema:
             $ref: '#/components/schemas/UserId'
       requestBody:
@@ -141,3 +141,10 @@ paths:
                           Поле отсутствует, если текущая страница содержит самый ранний пост пользователя.
         400:
           description: Некорректный запрос, например, из-за некорректного токена страницы.
+
+  /maintenance/ping:
+    get:
+      summary: Служебный эндпоинт для определения готовности сервиса к работе
+      responses:
+        200:
+          description: Сервис готов к работе
